setup: Add docker compose for postgresql

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "scripts": {
       "dev:api": "npm --workspace apps/api run dev",
       "build:api": "npm --workspace apps/api run build",
-      "start:api": "npm --workspace apps/api run start"
+      "start:api": "npm --workspace apps/api run start",
+      "db:up": "docker compose up -d",
+      "db:down": "docker compose down",
+      "db:logs": "docker compose logs -f postgres",
+      "db:reset": "docker compose down -v"
     }
   }
