--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,15 +13,19 @@
         "prisma:generate": "prisma generate"
     },
     "dependencies": {
+        "@prisma/adapter-pg": "^7.4.0",
         "@prisma/client": "^7.4.0",
-        "dotenv": "^16.4.5",
-        "express": "^4.19.2"
+        "express": "^4.19.2",
+        "pg": "^8.18.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
         "@types/node": "^20.11.30",
+        "@types/pg": "^8.16.0",
+        "dotenv": "^16.6.1",
         "prisma": "^7.4.0",
         "ts-node-dev": "^2.0.0",
+        "tsx": "^4.21.0",
         "typescript": "^5.4.5"
     }
 }
