--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,31 +1,33 @@
 {
-    "name": "api",
-    "private": true,
-    "type": "commonjs",
-    "main": "dist/index.js",
-    "scripts": {
-        "dev": "ts-node-dev --respawn --transpile-only --watch src src/index.ts",
-        "build": "tsc -p tsconfig.json",
-        "start": "node dist/index.js",
-        "db:migrate": "prisma migrate dev",
-        "db:deploy": "prisma migrate deploy",
-        "db:studio": "prisma studio",
-        "prisma:generate": "prisma generate"
-    },
-    "dependencies": {
-        "@prisma/adapter-pg": "^7.4.0",
-        "@prisma/client": "^7.4.0",
-        "express": "^4.19.2",
-        "pg": "^8.18.0"
-    },
-    "devDependencies": {
-        "@types/express": "^4.17.21",
-        "@types/node": "^20.11.30",
-        "@types/pg": "^8.16.0",
-        "dotenv": "^16.6.1",
-        "prisma": "^7.4.0",
-        "ts-node-dev": "^2.0.0",
-        "tsx": "^4.21.0",
-        "typescript": "^5.4.5"
-    }
+  "name": "api",
+  "private": true,
+  "type": "commonjs",
+  "main": "dist/index.js",
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only --watch src src/index.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js",
+    "db:migrate": "prisma migrate dev",
+    "db:deploy": "prisma migrate deploy",
+    "db:studio": "prisma studio",
+    "prisma:generate": "prisma generate",
+    "lint": "eslint src --ext .ts",
+    "format": "prettier --write src"
+  },
+  "dependencies": {
+    "@prisma/adapter-pg": "^7.4.0",
+    "@prisma/client": "^7.4.0",
+    "express": "^4.19.2",
+    "pg": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.30",
+    "@types/pg": "^8.16.0",
+    "dotenv": "^16.6.1",
+    "prisma": "^7.4.0",
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
+    "typescript": "^5.4.5"
+  }
 }
