--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
-    "name": "meal_planner",
-    "private": true,
-    "workspaces": [
-      "apps/*",
-      "packages/*"
-    ],
-    "scripts": {
-      "dev:api": "npm --workspace apps/api run dev",
-      "build:api": "npm --workspace apps/api run build",
-      "start:api": "npm --workspace apps/api run start",
-      "db:up": "docker compose up -d",
-      "db:down": "docker compose down",
-      "db:logs": "docker compose logs -f postgres",
-      "db:reset": "docker compose down -v"
-    }
+  "name": "meal_planner",
+  "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
+  "type": "module",
+  "scripts": {
+    "dev:api": "npm --workspace apps/api run dev",
+    "build:api": "npm --workspace apps/api run build",
+    "start:api": "npm --workspace apps/api run start",
+    "db:up": "docker compose up -d",
+    "db:down": "docker compose down",
+    "db:logs": "docker compose logs -f postgres",
+    "db:reset": "docker compose down -v",
+    "lint": "eslint .",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "eslint": "^9.39.2"
+  },
+  "dependencies": {
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.5.0",
+    "globals": "^17.3.0",
+    "prettier": "^3.8.1",
+    "typescript-eslint": "^8.56.0"
   }
+}
