--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
+          cache: npm
 
       - name: Install dependencies
         run: npm ci
+
+      # 🔹 Generate Prisma client before typechecking
+      - name: Generate Prisma Client (API)
+        run: npm run prisma:generate --workspace=apps/api
 
       - name: Lint
         run: npm run lint
