MEA-8 Added CI (#8)
* setup: added ci

* update: updated json

* update: ci.yml

* updated: web json

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,7 +12,9 @@
     "db:studio": "prisma studio",
     "prisma:generate": "prisma generate",
     "lint": "eslint src --ext .ts",
-    "format": "prettier --write src"
+    "format": "prettier --write src",
+    "typecheck": "tsc --noEmit",
+    "test": "echo \"No tests yet\" && exit 0"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.0",
