chore(seedData): created script db:seed

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,7 +14,12 @@
     "lint": "eslint src --ext .ts",
     "format": "prettier --write src",
     "typecheck": "tsc --noEmit",
-    "test": "echo \"No tests yet\" && exit 0"
+    "test": "echo \"No tests yet\" && exit 0",
+    "db:seed": "prisma db seed",
+    "db:seed:dev": "NODE_ENV=development prisma db seed"
+  },
+  "prisma": {
+    "seed": "tsx ./prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.0",
