--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,10 +24,12 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.4.0",
+    "bcrypt": "^6.0.0",
     "express": "^4.19.2",
     "pg": "^8.18.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
     "@types/pg": "^8.16.0",
