(auth) added POST /auth/login endpoint

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -10,3 +10,7 @@ DATABASE_URL=
 # CORS / Frontend origin (what the browser runs on)
 # Example: http://localhost:5173
 CLIENT_ORIGIN=http://localhost:5173
+
+
+JWT_SECRET= A SECRET STRING USED TO SIGN JWT TOKENS
+JWT_EXPIRES_IN= SOME AMT OF TIME (e.g. 7d, 24h, 60m, etc.)
